working on tablet view/fixed omage on course homepage

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,4 @@
+
 html{
     box-sizing: border-box;
 }
@@ -7,16 +8,22 @@ html{
     box-sizing: inherit;
 }
 
-body{
-    background-image: URL(../img/rain.jpg);
-    background-size:cover;
-    background-repeat: no-repeat;
-}
+
+
 :root{
     --accent-color: rgb(255, 196, 0);
     --block-background-color: rgba(1, 25, 49,0.65);
 }
 
+body{
+    margin: 0;
+    padding: 0;
+    background-image: url(../img/rain.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-position: center;
+}
 
 
 .box{
@@ -62,6 +69,7 @@ body h1 {
 
   
 
+
 /*Media Q's*/
 @media (max-width: 550px){
 
@@ -78,6 +86,20 @@ body h1 {
     .grid-container{
         display:grid;
         gap:20px;
+        grid-template-columns: 300px 300px;
+        grid-template-rows: 100px 100px;
+        background:rgba(0, 0, 0, 0);
+        list-style-type:none;
+        justify-content: center;
+        justify-content: space-evenly;
+    }
+}
+
+
+@media (min-width: 850px){
+    .grid-container{
+        display:grid;
+        gap:20px;
         grid-template-columns: 300px 300px 300px;
         grid-template-rows: 100px 100px 100px;
         background:rgba(0, 0, 0, 0);
@@ -86,3 +108,4 @@ body h1 {
         justify-content: space-evenly;
     }
 }
+
