--- a/final-project/assets/css/style.css
+++ b/final-project/assets/css/style.css
@@ -13,7 +13,7 @@ html {
     --gold-ish: rgb(255, 174, 0);
     
 }
-/*Global*/
+
 body{
   overflow:scroll;
   margin: 0 auto;
@@ -23,9 +23,18 @@ body{
 
 a:link,
 a:visited{
+  color: white;
+}
+
+a.ring:link{
   color: var(--gold-ish);
 }
 
+a.ring:visited{
+  color: red;
+}
+
+/*----------Nav----------*/
 nav li, footer li{
   list-style: none;
 }
@@ -35,19 +44,20 @@ nav{
   top: 0;
   padding: 10px;
   background: white;
-  box-shadow: rgba(240, 243, 56, 0.25) 0px 15px 20px -5px;
+  box-shadow: rgba(252, 255, 49, 0.25) 0px 15px 20px -5px;
   display: flex;
   justify-content: center;
   }
 
 .navbar ul{
     display: grid;
+    grid-gap: 10px;
     grid-template-columns: 1fr 1fr 1fr;
-    padding: 10px 10px 5px 10px;
+    padding: 10px 5px 5px 5px;
 }
 
 .navbar .button{
-  display: inline-block;
+  display: grid;
   padding: 5px 8px;
   border: 1px solid #000000;
   background-color: var(--grey-accent);
@@ -55,13 +65,11 @@ nav{
   border-radius: 4px;
   margin-top: 10px;
   color: #ffffff;
-  box-shadow: inset;
   width: 10em;
   text-align: center;
   font-size: 75%;
 }
-/*Global*/
-
+/*----------Nav----------*/
 
   header{
    /* position: sticky;
@@ -75,7 +83,7 @@ nav{
 
 
   .container{
-    width: 400px;
+    width: 420px;
     margin: 0 auto;
   }
 
@@ -87,33 +95,54 @@ nav{
     text-align: center;
   }
 
-  #history{
+  #history, #biography, #editions, #chapters{
     text-align: center;
     background: #ddd3a6;
     border-radius: 10px;
-    
   }
-/*Footer*/
+
+  .outer-chapter-list{
+    list-style-type: none;
+    margin:0px auto;
+    padding: 0px;          /*Browsers add padding to list...why?*/
+    font-weight: bold;
+    font-style: italic;
+  }
+
+  .inner-chapter-list {
+    list-style-type: none;
+    margin:0px auto;
+    padding: 0px;
+    font-weight: normal;
+    font-style: italic;
+  }
+
+  .outer-chapter-list li,.inner-chapter-list li{
+    margin-bottom: 5px;
+  }
+/*----------Footer----------*/
   footer{
-    max-height: 10vh;
+    max-height: 12vh;
     text-align: center;
     background: var(--main-blue);
     color: white;
-    font-size: 20px;
+    font-size: 17px;
+    padding-top: 1vh;
  
   }
 
   footer ul{
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
+    padding: 0px 5px 25px 5px;
   }
 
   .footlink {
     text-decoration: none;
   }
-  /*Footer*/
+  /*----------Footer----------*/
 
-/*cards*/
+/*----------cards-----------*/
   .editions-container{
     margin: 0px;
     padding: 20px;
@@ -166,4 +195,34 @@ nav{
     margin-top: 16px;
     color: #ffffff
   }
-  /*cards*/
+  /*----------cards----------*/
+
+
+  /*----------Media Query----------*/
+  @media all and (min-width:768px){
+    #ship{
+      grid-area: ship;
+    }
+    #summary{
+      grid-area: summary;
+    }
+
+    #history{
+      grid-area: history;
+    }
+  
+    main.container{
+      display:grid;
+      grid-gap: 10px;
+      grid-template-areas: 
+      "ship ship .. history"
+      "ship ship .. history"
+      "summary summary .. history"
+      ;
+    }
+
+    
+ 
+  
+  }
+
